# cloudflare-ddns

./: .gitignore  ChangeLog.md  README.md  cloudflare-ddns.cabal  hie.yaml  package.yaml
app/: Main.hs
src/: Lib.hs
