cabal-version:      3.4
name:               cloudflare-ddns
version:            0.2.0.0

-- A short (one-line) description of the package.
synopsis: Yet another `ddclient` clone to work with Cloudflare Dynamic DNS.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            Apache-2.0
author:             Tung Dao
maintainer:         me@tungdao.com

-- A copyright notice.
copyright:          Tung Dao <me@tungdao.com>
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    exposed-modules: Lib
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , DeriveGeneric
                      , DeriveAnyClass
                      , NamedFieldPuns
                      , RecordWildCards
                      , DataKinds
                      , ScopedTypeVariables
                      , LambdaCase
    ghc-options: -Wall
    build-depends:    base ^>=4.14.1.0
                    , rio
                    , aeson
                    , yaml
                    , servant
                    , servant-client
                    , servant-client-core
                    , network-info
                    , http-client
                    , http-client-tls
                    , dns

executable cloudflare-ddns
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: NoImplicitPrelude
                      , OverloadedStrings
                      , TypeApplications
    ghc-options: -Wall -O2 -threaded -with-rtsopts=-N
    build-depends:    base ^>=4.14.1.0
                    , rio
                    , yaml
                    , servant-client
                    , http-client-tls
                    , cloudflare-ddns
    hs-source-dirs:   app
    default-language: Haskell2010
